# open-meteo-rs

./: Cargo.toml
src/: client.rs
