[package]
name = "open-meteo-rs"
version = "0.0.4"
edition = "2021"
description = "HTTP client for open-meteo.com api"
homepage = "https://github.com/angelodlfrtr/open-meteo-rs"
repository = "https://github.com/angelodlfrtr/open-meteo-rs"
license-file = "LICENSE.txt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", features = ["serde"]}
chrono-tz = "0.9.0"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"
snafu = "0.8.4"
tokio = { version = "1.24.2", features = ["rt", "sync"] }

[dev-dependencies]
futures = "0.3.25"
